fairway-sf/force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <label>Membership</label>
    <pluralLabel>Memberships</pluralLabel>
    <nameField>
        <label>Membership #</label>
        <type>AutoNumber</type>
        <displayFormat>MBR-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>