fairway-sf/force-app/main/default/objects/Membership__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>true</default><label>Monthly</label></value>
            <value><fullName>Annual</fullName><default>false</default><label>Annual</label></value>
            <value><fullName>Lifetime</fullName><default>false</default><label>Lifetime</label></value>
            <value><fullName>Complimentary</fullName><default>false</default><label>Complimentary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>