fairway-sf/force-app/main/default/objects/Membership__c/fields/Complimentary_Years_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Complimentary_Years_Remaining__c</fullName>
    <label>Complimentary Years Remaining</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Counts down from the investor perk years granted. Only applicable for Founding Member tier.</description>
</CustomField>