fairway-sf/force-app/main/default/objects/Membership__c/fields/Founding_Tier__c.field-meta.xml
<CustomField>
    <fullName>Founding_Tier__c</fullName>
    <label>Founding Investor Tier</label>
    <type>Picklist</type>
    <description>Only populated for Founding Member tier — maps to investor perk level.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
            <value><fullName>Angel</fullName><default>false</default><label>Angel</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>