fairway-sf/force-app/main/default/objects/Membership__c/fields/Membership_Tier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Tier__c</fullName>
    <label>Membership Tier</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Guest</fullName><default>true</default><label>Guest</label></value>
            <value><fullName>Member</fullName><default>false</default><label>Member</label></value>
            <value><fullName>Founding Member</fullName><default>false</default><label>Founding Member</label></value>
            <value><fullName>Staff</fullName><default>false</default><label>Staff</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>