fairway-sf/force-app/main/default/objects/Membership__c/fields/Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate__c</fullName>
    <label>Monthly Rate</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>0.00 for complimentary memberships.</description>
</CustomField>