fairway-sf/force-app/main/default/objects/Membership__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
    <description>Null for lifetime/complimentary memberships.</description>
</CustomField>