fairway-sf/force-app/main/default/objects/Membership__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Complimentary</fullName><default>false</default><label>Complimentary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>